Renamed npm module back to vcontrol

--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "vcontrol-client",
-  "version": "0.0.5",
+  "name": "vcontrol",
+  "version": "0.0.6",
   "description": "vcontrold client for nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "mocha test/vcontrolclient.coffee"
+    "test": "mocha test/vcontrol.coffee"
   },
   "files": [
     "index.js"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/nexx512/node-vcontrol-client.git"
+    "url": "git+https://github.com/nexx512/node-vcontrol.git"
   },
   "keywords": [
     "vcontrold",
@@ -21,9 +21,9 @@
   "author": "Jürgen Diez",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/nexx512/node-vcontrol-client/issues"
+    "url": "https://github.com/nexx512/node-vcontrol/issues"
   },
-  "homepage": "https://github.com/nexx512/node-vcontrol-client#readme",
+  "homepage": "https://github.com/nexx512/node-vcontrol#readme",
   "devDependencies": {
     "coffeescript": "^2.3.2",
     "should": "^13.2.3"
